--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 spiel" onclick="action('jogodavelha.html')">
-                    <h5>Jogo da Velha</h5>
+                    <h5>"Rautezeichen"</h5>
+                    <hr>
+                    <h6>Jogo da Velha</h6>
                 </div>
                 <div class="col-md-3 spiel" onclick="action('jogodavelha.html')">
                     Vasco2
