--- a/spielen/jogodavelha.html
+++ b/spielen/jogodavelha.html
@@ -12,7 +12,7 @@
         <script></script>
     </head>
     <body>
-        <h1>Jogo da Velha</h1>
+        <h1>Jogo da Velha / "Rautezeichen"</h1>
         <div class="container">
             <div class="row">
                 <div class="col-md-2" style="margin: auto">
